[[bin]]
name = "Sun"
path = "Source/Sun.rs"

[build-dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.14"

[dependencies]
async-trait = "0.1.80"
Echo = { version = "0.0.0", path = "../Echo" }
futures = "0.3.30"
serde = "1.0.203"
serde_json = "1.0.120"
tokio = "1.38.0"
tokio-tungstenite = "0.23.1"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
publish = false
default-run = "Sun"
description = "☀️ Sun —"
license = "MIT"
name = "Sun"
repository = "HTTPS://GitHub.Com/CodeEditorLand/Sun.git"
version = "0.0.0"
edition = "2021"
