[[bin]]
name = "Sun"
path = "Source/Sun.rs"

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.14"

[dependencies]
Echo = { version = "0.0.1", path = "../Echo" }
async-trait = "0.1.81"
futures = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
tokio = "1.38.1"
tokio-tungstenite = "0.23.1"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
publish = false
default-run = "Sun"
description = "☀️ Sun —"
license = "MIT"
name = "Sun"
repository = "HTTPS://GitHub.Com/CodeEditorLand/Sun.git"
version = "0.0.1"
edition = "2021"
