[[bin]]
name = "Sun"
path = "Source/Sun.rs"

[build-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"

[dependencies]
Echo = { version = "0.0.1", path = "../Echo" }
async-trait = "0.1.83"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
tokio = "1.40.0"
tokio-tungstenite = "0.24.0"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
publish = false
default-run = "Sun"
description = "☀️ Sun —"
license = "MIT"
name = "Sun"
repository = "https://github.com/CodeEditorLand/Sun.git"
version = "0.0.1"
edition = "2021"
